syntax = "proto3";
package isuxportal.proto.services.admin;
option go_package = "github.com/isucon/isucon10-portal/proto/services/admin";

import "isuxportal/resources/leaderboard.proto";

message DashboardQuery {
}

message DashboardResponse {
  isuxportal.proto.resources.Leaderboard leaderboard = 1;
}

